--- a/Gateway.WebApi/Gateway.WebApi.csproj
+++ b/Gateway.WebApi/Gateway.WebApi.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="Ocelot" Version="16.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="ocelot.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
