--- a/Customer.Microservice/Customer.Microservice.csproj
+++ b/Customer.Microservice/Customer.Microservice.csproj
@@ -4,6 +4,19 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>Customer.Microservice.xml</DocumentationFile>
+    <WarningsAsErrors>NU1605</WarningsAsErrors>
+    <NoWarn>1701;1702; 1591</NoWarn>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\20200718102758_Inital.cs" />
+    <Compile Remove="Migrations\20200718102758_Inital.Designer.cs" />
+    <Compile Remove="Migrations\20200718104516_Initial.cs" />
+    <Compile Remove="Migrations\20200718104516_Initial.Designer.cs" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
